# GIT-Pilot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py  test_auth.py  test_repository.py
